	* Changed the name of the "bug" command in the AdminCommands
	plugin to "reportbug" instead.
	
	* Added QUIT stat-keeping to ChannelDB.  This added another column
	to the database; you'll need to add a 'quits' column to both
	user_stats and channel_stats.  Good luck.
	
	* Removed the OwnerCommands.say command; it wasn't useful enough,
	and is so easily written that anyone can have it back if they want
	it.
	
	* Moved bestuptime command from FunDB to Status.
	
	* Changed OwnerCommands.load (and loadPluginModule) to be
	case-insensitive, so "load funcommands" works just as well as
	"load FunCommands".
	
2003-10-12  Jeremy Fincher  <jemfinch@users.sf.net>
	
	* Version 0.73.1!

	* Fixed a bug in Math.{calc,rpn} where certain functions
	("degrees" in particular) that didn't like complex arguments would
	fail on numbers on which they shouldn't.

	* Added an optional "key" argument to ChannelCommands.cycle.

	* Fixed bolding in supybot-wizard.py.
	
	* Fixed handling of the secure flag by ircdb.IrcUser.setAuth;
	previously it didn't prevent someone with an unmatched hostmask
	from identifying.

	* Fixed imports in the DCC plugin.

	* Fixed a bug where the bot would not reply to nick-addressed
	messages on a channel if his nick wasn't entirely lowercased.

	* Fixed the Relay plugin to relay topic changes; an oversight not
	caught earlier because supybot has for a long time managed our
	topics.

	* Fixed a bug in the Services plugin where the bot would ghost
	himself if his nick didn't match in case the nick given.

	* Added the ability for PrivmsgCommandAndRegexp to have regexps
	that are called *after* callbacks.addressed has been called on the
	message -- see ChannelDB.{increase,decrease}Karma for an example.

	* Fixed bug in supybot-wizard.py where plugins without configure
	functions would raise an uncaught exception.

	* Fixed debincoming to work since the removal of baseplugin; it
	was missing an import.
